@@ -31,9 +31,7 @@ retranslate-all-command-help=Retranslate all of your personal dictionaries.
 
 [rb-gui]
 back-to=Back to __1__
-craftable-recipes=Craftable recipes (__1__)
 crafter-upper=Crafter
-crafter=crafter
 forward-to=Forward to __1__
 ingredient-in=Ingredient in (__1__)
 ingredients=Ingredients (__1__)
